--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_resultFragment"
-            app:destination="@id/resultFragment" />
+            app:destination="@id/resultFragment"
+            app:enterAnim="@anim/from_right_to_on"
+            app:exitAnim="@anim/from_on_to_left"
+            app:popEnterAnim="@anim/from_left_to_on"
+            app:popExitAnim="@anim/from_on_to_right" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
