--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,80 +4,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimary"
     tools:context=".fragment.HomeFragment">
 
-        <TextView
-            android:gravity="center"
-            android:id="@+id/textView"
-            android:layout_width="245dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="200dp"
-            android:text="@string/hash_generator"
-            android:textAlignment="center"
-            android:textSize="40sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="184dp"
+        android:layout_height="171dp"
+        android:alpha="0"
+        android:src="@drawable/ic_baseline_check_circle_outline_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        style="@style/Widget.Material3.Button.ElevatedButton"
+        android:id="@+id/generateBtn"
+        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:text="@string/generate"
+        android:textSize="25sp"
+        android:backgroundTint="?attr/colorPrimaryVariant"
+        android:textColor="?attr/colorOnPrimary"
+        android:textAppearance="?attr/textAppearanceLabelLarge"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintVertical_bias="0.644" />
 
-        <Spinner
-            android:spinnerMode="dropdown"
-            android:id="@+id/appCompatSpinner"
-            android:backgroundTint="@color/purple_200"
-            android:layout_width="269dp"
-            android:layout_height="57dp"
-            android:layout_marginTop="58dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="0dp"
+        android:layout_height="170dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/shape"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="@string/enter_text"
+        android:inputType="textMultiLine"
+        android:maxLines="6"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/appCompatSpinner"
+        app:layout_constraintStart_toStartOf="@+id/appCompatSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner" />
 
-        <EditText
-            android:padding="5dp"
-            android:id="@+id/editText"
-            android:layout_width="0dp"
-            android:layout_height="170dp"
-            android:layout_marginTop="28dp"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="@string/enter_text"
-            android:inputType="textMultiLine"
-            android:maxLines="6"
-            app:layout_constraintEnd_toEndOf="@+id/appCompatSpinner"
-            app:layout_constraintStart_toStartOf="@+id/appCompatSpinner"
-            app:layout_constraintTop_toBottomOf="@+id/appCompatSpinner"
-             />
 
-        <Button
-            android:textSize="20sp"
-            android:id="@+id/generateBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/generate"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText"
-            app:layout_constraintVertical_bias="0.883" />
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/teal_200"
-            android:alpha="0"/>
+    <Spinner
+        android:id="@+id/appCompatSpinner"
+        android:popupBackground="@drawable/shape"
+        android:layout_width="269dp"
+        android:layout_height="57dp"
+        android:dropDownWidth="269dp"
+        android:backgroundTint="?attr/colorOnPrimary"
+        android:layout_marginTop="104dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="SpeakableTextPresentCheck" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="184dp"
-            android:layout_height="171dp"
-            android:src="@drawable/ic_baseline_check_circle_outline_24"
-            app:layout_constraintBottom_toBottomOf="@+id/generateBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:alpha="0"/>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="245dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="108dp"
+        android:gravity="center"
+        android:text="@string/hash_generator"
+        android:textAlignment="center"
+        android:textColor="?attr/colorOnPrimary"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:typeface="serif"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
