--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<item android:id="@+id/home_menu"
-    android:title="@android:string/cancel"
+<item android:id="@+id/home_menu_clear"
+    android:title="@string/clear"
     app:showAsAction="never"
     />
 </menu>
