UI changes & more

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
     <Button
         style="@style/Widget.Material3.Button.ElevatedButton"
+        app:rippleColor="?attr/colorPrimary"
         android:id="@+id/generateBtn"
         android:layout_height="60dp"
         android:layout_width="wrap_content"
