--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -12,6 +12,7 @@
         style="@style/Widget.Material3.Button.ElevatedButton.Icon"
         android:layout_width="270dp"
         android:layout_height="60dp"
+        app:rippleColor="?attr/colorPrimary"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="44dp"
